[package]
name = "epac-utils"
description = "Set of Utilities for Errors, and some cachers/timers/macros"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.63", optional = true }
find_folder = { version = "0.3.0", optional = true }
piston_window = { version = "0.124.0", optional = true }
tracing = { version = "0.1.36", optional = true }

[features]
default = ["anyhow", "tracing"]
anyhow = ["dep:anyhow"]
tracing = ["dep:tracing"]
piston_cacher = ["dep:piston_window", "dep:find_folder"]
