[package]
name = "burntnail-utils"
authors = ["BurntNail <BurntNail@proton.me>"]
description = "Set of Utilities for Errors, and some cachers/timers/macros"
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/BurntNail/burntnail-utils/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", optional = true }
piston_window = { version = "0.127.0", optional = true }
find_folder = { version = "0.3.0", optional = true }
num-traits = "0.2.15"
tracing = { version = "0.1.36", optional = true }
anyhow = { version = "1.0.66", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[features]
default = ["tracing", "eyre"]
tracing = ["dep:tracing"]
eyre = ["dep:color-eyre"]
ah = ["dep:anyhow"]
piston_cacher = ["dep:piston_window", "dep:find_folder"]

[[bench]]
name = "memcacher"
harness = false
